--- a/discovery-server-dev.yml
+++ b/discovery-server-dev.yml
@@ -1,11 +1,21 @@
 server:
   port: 8761
+
 spring:
   application:
     name: discovery-server
+
 eureka:
   instance:
     hostname: discovery
   client:
     register-with-eureka: false
     fetch-registry: false
+  server:
+    enable-self-preservation: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
