--- a/gateway-service-dev.yaml
+++ b/gateway-service-dev.yaml
@@ -1,15 +1,17 @@
-server:
-  port: 8080
 spring:
   application:
     name: gateway
   cloud:
     gateway:
-      routes:
-        - id: user-service
-          uri: lb://USER-SERVICE
-          predicates:
-            - Path=/api/users/**
       discovery:
         locator:
           enabled: true
+          lower-case-service-id: true
+      routes:
+        # Demonstration route (falls back to discovery locator)
+        - id: user_service_path
+          uri: lb://user-service
+          predicates:
+            - Path=/api/users/**
+          filters:
+            - StripPrefix=1
