--- a/gateway-service-dev.yaml
+++ b/gateway-service-dev.yaml
@@ -23,7 +23,7 @@ spring:
       client:
         provider:
           keycloak:
-            issuer-uri: http://padmini-keycloak:8090/realms/padmini-farms
+            issuer-uri: http://keycloak:8090/realms/padmini-farms
         registration:
           keycloak:
             client-id: padmini-gateway
@@ -32,7 +32,15 @@ spring:
             redirect-uri: "{baseUrl}/login/oauth2/code/keycloak"
       resourceserver:
         jwt:
-          issuer-uri: http://padmini-keycloak:8090/realms/padmini-farms
+          issuer-uri: http://keycloak:8090/realms/padmini-farms
+
+# IMPORTANT: use service name "keycloak" (matches docker-compose service)
+keycloak:
+  server-url: http://keycloak:8090
+  realm: padmini-farms
+  admin:
+    username: admin
+    password: admin
 
 eureka:
   client:
